--- a/app/src/main/res/layout/activity_training_1.xml
+++ b/app/src/main/res/layout/activity_training_1.xml
@@ -97,6 +97,7 @@
         android:layout_height="wrap_content"
         android:elevation="3dp"
         android:text="TextView"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/calendarViewTraining"
